--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "connect-livereload": "^0.6.1",
+    "express": "^4.18.1",
+    "livereload": "^0.9.3"
   }
 }
